# image_filter

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  image_filtering_test.sln  main.cpp  vcpkg.json
MATLAB/: autolevels_my.m  demonstration.m  gradient_process.m  low_pass_filter.m  main.m  sharpness.m  yuv_filter_test.m  yuv_format.m
MATLAB/YUV/: yuv2rgb.m
MATLAB/filters/: Demo.m  border_copy_symmetric.m  border_replication_circular.m  border_replication_zerros.m  convolution2D_circ.m  convolution2D_valid.m  fast_nl_means.m  fill_medarray.m  filters_tests.m  gauss_kernel_create.m  get_median1D.m  make_kernel.m  medfilter2D.m
MATLAB/postprocessing_v1/: Algorithm overview.docx  im_filter_circular.m  image_postprocessing_v1.m  rgb2gray_custom.m  Діаграма без назви.drawio
headers/: convolution_tools.h  custom_types.h  image_noiser.h  standard_lib_includer.h
image_filter_cv/: CMakeLists.txt  image_filter_cv.cpp  image_filter_cv.h
image_filter_cv/headers/: filters.h  image_estimator.h  median_filter.h  nlm_filter.h  simple_image_filters.h
image_filter_cv/sources/: stream_manager.cpp
image_filtering_test/: image_filtering_test.vcxproj  image_filtering_test.vcxproj.filters  median_filter.cpp  simple_image_filters.cpp
image_processor/inc/: convolution_tools.h  filters.h  gauss_filter.h  image_estimator.h  image_mat_tools.h  image_noiser.h  image_plotter.h  includes.hpp  median_filter.h  nlm_filter.h  simple_image_filters.h  standard_lib_includer.h  stream_manager.h
image_processor/src/: convolution_tools.cpp  filters.cpp  gauss_filter.cpp  image_estimator.cpp  image_mat_tools.cpp  image_noiser.cpp  image_plotter.cpp
opencv/: README.md.txt
opencv/sources/: CMakeLists.txt  COPYRIGHT  SECURITY.md
opencv/sources/apps/: python_app_test.py
opencv/sources/apps/createsamples/: utility.cpp
opencv/sources/apps/interactive-calibration/: CMakeLists.txt  calibCommon.hpp  calibController.cpp  calibPipeline.cpp  frameProcessor.cpp  frameProcessor.hpp  main.cpp  parametersController.cpp
opencv/sources/apps/traincascade/: boost.cpp  cascadeclassifier.cpp  imagestorage.cpp  old_ml.hpp  old_ml_boost.cpp  old_ml_inner_functions.cpp  old_ml_precomp.hpp  old_ml_tree.cpp
opencv/sources/apps/visualisation/: opencv_visualisation.cpp
opencv/sources/cmake/: FindCUDA.cmake  FindCUDNN.cmake  FindONNX.cmake  OpenCVCRTLinkage.cmake  OpenCVCompilerOptimizations.cmake  OpenCVCompilerOptions.cmake  OpenCVDetectCUDA.cmake  OpenCVDetectCUDALanguage.cmake  OpenCVDetectCUDAUtils.cmake  OpenCVDetectCXXCompiler.cmake  OpenCVDetectDirectML.cmake  OpenCVDetectDirectX.cmake  OpenCVDetectFlatbuffers.cmake  OpenCVDetectHalide.cmake  OpenCVDetectPython.cmake  OpenCVDetectVulkan.cmake  OpenCVFindAVIF.cmake  OpenCVFindCANN.cmake  OpenCVFindFrameworks.cmake  OpenCVFindLibsGUI.cmake  OpenCVFindLibsGrfmt.cmake  OpenCVFindLibsPerf.cmake  OpenCVFindOpenBLAS.cmake  OpenCVFindProtobuf.cmake  OpenCVFindTIMVX.cmake  OpenCVGenConfig.cmake  OpenCVGenInfoPlist.cmake  OpenCVGenPkgconfig.cmake  OpenCVModule.cmake  OpenCVPCHSupport.cmake  OpenCVPackaging.cmake  OpenCVUtils.cmake  copy_files.cmake
opencv/sources/cmake/android/: OpenCVDetectAndroidSDK.cmake  android_gradle_projects.cmake
opencv/sources/cmake/checks/: cann.cpp  cpu_fp16.cpp  cpu_lasx.cpp  cpu_lsx.cpp  cpu_neon_bf16.cpp  cpu_neon_dotprod.cpp  cpu_neon_fp16.cpp  cpu_rvv.cpp  directml.cpp  directx.cpp
opencv/sources/cmake/mirrors/: custom.cmake  gitcode.cmake
opencv/sources/cmake/templates/: OpenCVConfig-CUDA.cmake.in  OpenCVConfig-CUDALanguage.cmake.in  cvconfig.h.in  opencv_run_all_tests_unix.sh.in
opencv/sources/doc/: CMakeLists.txt  LICENSE_CHANGE_NOTICE.txt  opencv.bib
opencv/sources/doc/pattern_tools/: gen_pattern.py  svgfig.py  test_charuco_board.py  test_requirements.txt
opencv/sources/modules/core/: CMakeLists.txt
opencv/sources/modules/dnn/: CMakeLists.txt
opencv/sources/modules/features2d/: CMakeLists.txt
sources/: main.cpp  nlm_filter.cpp
(+989 files in other folders)
